--- a/src/locales/es/health.json
+++ b/src/locales/es/health.json
@@ -13,7 +13,7 @@
       {
         "id": "slide1",
         "desktop": "https://snack.yummiespromociones.com/yumminuts/banner-productos.png",
-        "mobile": "https://snack.yummiespromociones.com/yumminuts/banner-productos.png",
+        "mobile": "https://snack.yummiespromociones.com/yumminuts/mobileproducts.jpg",
         "alt": "Home Yumminuts",
         "title": "",
         "description": "",
