--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -26,7 +26,7 @@
     },
     "brands": {
       "title": "Our Snack Brands",
-      "description": "Discover Yummi Nuts, Zambos, Ranchitas, and Superman. Each brand has its own unique flavors and authentic character that conquers Central America."
+      "description": "Discover Yummi Nuts, Zambos, Ranchitas. Each brand has its own unique flavors and authentic character that conquers Central America."
     },
     "about_us": {
       "title": "About Us - History and Values",
@@ -273,16 +273,16 @@
       "newsletter":"Stay up to date with all our news and promotions",
       "instagramLinks":[
         {
-          "url":"https://www.instagram.com/reel/DLYiMsKtKon/?igsh=MXRza3ByZmlxbmtndw=="
+          "url":"https://www.instagram.com/reel/DRVAh_2gdOx/?igsh=MWFqcm95bWRuMmt2dg=="
         },
         {
-          "url":"https://www.instagram.com/reel/DLTEEQXvxkG/?igsh=MTQ4MzVkMnQxNWRrZA=="
+          "url":"https://www.instagram.com/reel/DRNscpmCTgl/?igsh=ZHg4bzd5YTRoNXlu"
         },
         {
-          "url":"https://www.instagram.com/reel/DKiDRYgtggB/?igsh=Ym9yNHdtbzJhczdi"
+          "url":"https://www.instagram.com/reel/DQfRliVkRCM/?igsh=MTF0amw0cDc5djd3Mg=="
         },
         {
-          "url":"https://www.instagram.com/p/DKaTrbKRfmO/?igsh=bTIyMGd5Y3kxYzY0"
+          "url":"https://www.instagram.com/reel/DQcs9f6iXdF/?igsh=ZjYwMHlnNm9ndDNj"
         }
       ]
     }
