--- a/src/locales/en/products.json
+++ b/src/locales/en/products.json
@@ -37,7 +37,7 @@
     {
       "id": "yummi-nut-mani-con-sal",
       "name": "Yummi Nut Maní con Sal",
-      "category": "Peanuts",
+      "category": "Maní",
       "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/yummi-nut-mani-con-sal-2.webp",
       "background_color": "#0073C1",
       "header_color": "#0073C1",
@@ -53,18 +53,37 @@
       ],
       "weight": ["30g", "60g", "120g"]
     },
+      {
+      "id": "yummi-nut-mani-japones-con-sabor-a-chile-toreado",
+      "name": "Yummi Nut Maní Japones con Sabor a Chile Toreado",
+      "category": "Maní",
+      "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/yummi-nuts-chile-toreado.webp",
+      "background_color": "#008444",
+      "header_color":"#008444",
+      "text_color": "primary",
+      "header_background": "#008444",
+      "header_text_color": "primary",
+      "color_button": "#008444",
+      "description": "Maní estilo japonés con cobertura crujiente.",
+      "available": "https://snack.yummiespromociones.com/taqueritos/banderas.webp",
+      "background_image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/yummi-nuts-chile-toreado.webp",
+      "sizes": [
+        { "value": "150", "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/yummi-nuts-chile-toreado.webp" }
+      ],
+      "weight": ["30g", "60g", "120g"]
+    },
     {
       "id": "yummi-nut-mani-con-limon",
       "name": "Yummi Nut Maní con Limón",
-      "category": "Peanuts",
+      "category": "Maní",
       "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/yummi-nut-mani-con-limon-2.webp",
       "background_color": "#B4BF8E",
-      "header_color": "##B4BF8E",
+      "header_color":"#B4BF8E",
       "text_color": "primary",
-      "header_background": "white",
+      "header_background": "#B4BF8E",
       "header_text_color": "primary",
       "color_button": "#B4BF8E",
-      "description": "Peanuts with a citrus lemon touch.",
+      "description": "Maní con un toque cítrico de limón.",
       "available": "https://snack.yummiespromociones.com/taqueritos/banderas.webp",
       "background_image": "https://snack.yummiespromociones.com/snacksyummies/yumminuts-producto.webp",
       "sizes": [
@@ -75,15 +94,15 @@
     {
       "id": "yummi-nut-mani-japones",
       "name": "Yummi Nut Maní Japonés",
-      "category": "Peanuts",
+      "category": "Maní",
       "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/yummi-nut-mani-japones-2.webp",
-      "background_color": "#796B6D",
+      "background_color":"#796B6D",
       "header_color": "#796B6D",
       "text_color": "primary",
       "header_background": "white",
       "header_text_color": "primary",
       "color_button": "#796B6D",
-      "description": "Japanese-style peanuts with a crunchy coating.",
+      "description": "Maní estilo japonés con cobertura crujiente.",
       "available": "https://snack.yummiespromociones.com/taqueritos/banderas.webp",
       "background_image": "https://snack.yummiespromociones.com/snacksyummies/yumminuts-producto.webp",
       "sizes": [
@@ -94,7 +113,7 @@
     {
       "id": "yummi-nut-maranon-con-sal",
       "name": "Yummi Nut Marañón con Sal",
-      "category": "Cashews",
+      "category": "Marañones",
       "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/yummi-nut-maranon-con-sal-2.webp",
       "background_color":"#9AE3BE",
       "header_color": "#9AE3BE",
@@ -102,7 +121,7 @@
       "header_background": "white",
       "header_text_color": "primary",
       "color_button": "#9AE3BE",
-      "description": "Roasted cashews with salt.",
+      "description": "Marañones tostados con sal, llenos de energía.",
       "available": "https://snack.yummiespromociones.com/taqueritos/banderas.webp",
       "background_image": "https://snack.yummiespromociones.com/snacksyummies/yumminuts-producto.webp",
       "sizes": [
@@ -113,15 +132,15 @@
     {
       "id": "yummi-nut-mix-almendras",
       "name": "Yummi Nut Mix Almendras",
-      "category": "Seeds",
+      "category": "Semillas",
       "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/yummi-nut-mix-almendras-2.webp",
-      "background_color":"#DC9EE5",
-      "header_color": "##DC9EE5",
+      "background_color": "#DC9EE5",
+      "header_color":  "#DC9EE5",
       "text_color": "primary",
       "header_background": "white",
       "header_text_color": "primary",
       "color_button": "#DC9EE5",
-      "description": "Nut mix with almonds.",
+      "description": "Mezcla de frutos secos con almendras.",
       "available": "https://snack.yummiespromociones.com/taqueritos/banderas.webp",
       "background_image": "https://snack.yummiespromociones.com/snacksyummies/yumminuts-producto.webp",
       "sizes": [
@@ -132,7 +151,7 @@
     {
       "id": "yummi-nut-omega-mix",
       "name": "Yummi Nut Omega Mix",
-      "category": "Seeds",
+      "category": "Semillas",
       "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/yummi-nut-omega-mix-2.webp",
       "background_color": "#DC9EE5",
       "header_color": "#DC9EE5",
@@ -140,7 +159,7 @@
       "header_background": "white",
       "header_text_color": "primary",
       "color_button": "#DC9EE5",
-      "description": "Seed and nut mix rich in omegas.",
+      "description": "Mix de semillas y frutos con Omegas.",
       "available": "https://snack.yummiespromociones.com/taqueritos/banderas.webp",
       "background_image": "https://snack.yummiespromociones.com/snacksyummies/yumminuts-producto.webp",
       "sizes": [
@@ -150,35 +169,35 @@
     },
     {
       "id": "yummi-nut-barra-fresa",
-      "name": "Strawberry Bar",
-      "category": "Bars",
-      "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/yummi-nut-barra-fresa.webp",
+      "name": "Barra Fresa",
+      "category": "Barras",
+      "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/barra-fresa2.webp",
       "background_color": "#E67DA0",
       "header_color": "#E67DA0",
       "text_color": "primary",
       "header_background": "white",
       "header_text_color": "primary",
       "color_button": "#E67DA0",
-      "description": "Fruit bar with strawberry flavor, perfect to take on the go.",
+      "description": "Barra de frutos con sabor a fresa, ideal para llevar y disfrutar en cualquier momento.",
       "available": "https://snack.yummiespromociones.com/taqueritos/banderas.webp",
       "background_image": "https://snack.yummiespromociones.com/snacksyummies/yumminuts-producto.webp",
       "sizes": [
-        { "value": "150", "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/yummi-nut-barra-fresa.webp" }
+        { "value": "150", "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/yummi-nut-barra-fresa2.webp" }
       ],
       "weight": ["30g", "60g", "120g"]
     },
     {
       "id": "yummi-nut-barra-arandano",
-      "name": "Blueberry Bar",
-      "category": "Bars",
-      "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/yummi-nut-barra-arandano.webp",
+      "name": "Barra Arándano",
+      "category": "Barras",
+      "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/barra-arandano.webp",
       "background_color": "#8C85C6",
       "header_color": "#8C85C6",
       "text_color": "primary",
       "header_background": "white",
       "header_text_color": "primary",
       "color_button": "#8C85C6",
-      "description": "Fruit bar with blueberry flavor, tasty and convenient for your day.",
+      "description": "Barra de frutos con sabor a arándano, deliciosa y práctica para tu día.",
       "available": "https://snack.yummiespromociones.com/taqueritos/banderas.webp",
       "background_image": "https://snack.yummiespromociones.com/snacksyummies/yumminuts-producto.webp",
       "sizes": [
@@ -188,16 +207,16 @@
     },
     {
       "id": "yummi-nut-barra-coco",
-      "name": "Coconut Bar",
-      "category": "Bars",
-      "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/yummi-nut-barra-coco.webp",
+      "name": "Barra Coco",
+      "category": "Barras",
+      "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/barra-coco.webp",
       "background_color": "#D6B196",
       "header_color": "#D6B196",
       "text_color": "primary",
       "header_background": "white",
       "header_text_color": "primary",
       "color_button": "#D6B196",
-      "description": "Bar with coconut flavor, smooth and full of natural taste.",
+      "description": "Barra con sabor a coco, suave y llena de sabor natural.",
       "available": "https://snack.yummiespromociones.com/taqueritos/banderas.webp",
       "background_image": "https://snack.yummiespromociones.com/snacksyummies/yumminuts-producto.webp",
       "sizes": [
