Revisión ortografía y cambio de urls

--- a/src/locales/es/recipes/aderezo-thai-con-yummi-nuts-mani-con-limon.json
+++ b/src/locales/es/recipes/aderezo-thai-con-yummi-nuts-mani-con-limon.json
@@ -12,15 +12,15 @@
   "type": "image",
   "preparation_time": 5,
   "ingredients": [
-    "1 paquete de Yummi Nuts Maní con Limón",
-    "3 cucharadas de vinagre de arroz",
-    "2 cucharadas de salsa soya",
-    "2 cucharadas de miel de abeja",
-    "2 cucharadas de jugo de limón",
-    "1 cucharada de jengibre fresco",
-    "1 cucharada de aceite de ajonjolí",
-    "1 diente de ajo picado",
-    "sal y pimienta al gusto"
+  "1 paquete de Yummi Nuts Maní con Limón",
+  "3 cucharadas de vinagre de arroz",
+  "2 cucharadas de salsa soya",
+  "2 cucharadas de miel de abeja",
+  "2 cucharadas de jugo de limón",
+  "1 cucharada de jengibre fresco",
+  "1 cucharada de aceite de ajonjolí",
+  "1 diente de ajo picado",
+  "Sal y pimienta al gusto"
   ],
   "instructions": [
     "Paso 1: Coloca todos los ingredientes en un procesador de alimentos y procesa hasta obtener la consistencia deseada. Si te parece muy cremoso, agrega agua poco a poco."
