--- a/src/locales/es/recipes/barritas-con-yummi-nuts-con-sal.json
+++ b/src/locales/es/recipes/barritas-con-yummi-nuts-con-sal.json
@@ -15,7 +15,7 @@
     "Ingredientes para la mantequilla de maní:",
     "2 tazas de Yummi Nuts con Sal",
     "2 cucharadas de miel",
-    "sal al gusto",
+    "Sal al gusto",
     "Ingredientes para las barritas:",
     "1 taza de mantequilla de maní casera",
     "2/3 de taza de miel",
@@ -29,8 +29,8 @@
     "Paso 1: Coloca los maní en un procesador de alimentos y procesa hasta que lleguen a una consistencia líquida/cremosa. Agrega la miel y sal si gustas. Procesa y coloca en un recipiente.",
     "Preparación barritas:",
     "Paso 1: Coloca papel para hornear en una bandeja para horno.",
-    "Paso 3: En un recipiente mezcla la mantequilla de maní, la miel, la vainilla hasta suavizarlo y mezclarlo bien. Agrega el resto de ingredientes y mezcla bien.",
-    "Paso 5: Coloca la mezcla en la bandeja y presiona bien. Refrigera por una hora y luego córtala en tiras o barritas."
+    "Paso 2: En un recipiente mezcla la mantequilla de maní, la miel, la vainilla hasta suavizarlo y mezclarlo bien. Agrega el resto de ingredientes y mezcla bien.",
+    "Paso 3: Coloca la mezcla en la bandeja y presiona bien. Refrigera por una hora y luego córtala en tiras o barritas."
   ],
   "brand": [
     "yumminuts"
