--- a/src/locales/es/recipes/brocoli-rostizado-con-yummi-nuts-mix-de-semillas.json
+++ b/src/locales/es/recipes/brocoli-rostizado-con-yummi-nuts-mix-de-semillas.json
@@ -14,8 +14,8 @@
   "ingredients": [
     "1 ½ libra de brócoli cortado en floretes del mismo tamaño",
     "3 cucharadas de aceite de oliva",
-    "el jugo de medio limón",
-    "sal y pimienta al gusto",
+    "El jugo de medio limón",
+    "Sal y pimienta al gusto",
     "1 diente de ajo picado",
     "¼ de taza de queso parmesano",
     "1 bolsa de Yummi Nuts Mix de Semillas"
