--- a/src/locales/es/recipes/muffins-de-mani-con-yummi-nuts-mani-con-sal.json
+++ b/src/locales/es/recipes/muffins-de-mani-con-yummi-nuts-mani-con-sal.json
@@ -15,7 +15,7 @@
     "Ingredientes para la mantequilla de maní:",
     "2 tazas de Yummi Nuts con Sal",
     "2 cucharadas de miel",
-    "sal al gusto",
+    "Sal al gusto",
     "Ingredientes para los muffins:",
     "1 taza de harina",
     "1 ½ cucharaditas de polvo de hornear",
