--- a/src/locales/es/recipes/pie-de-mani-con-yummi-nuts.json
+++ b/src/locales/es/recipes/pie-de-mani-con-yummi-nuts.json
@@ -14,7 +14,7 @@
   "ingredients": [
     "Ingredientes para la masa:",
     "1 barra de margarina fría",
-    "1 1/4 taza de harina",
+    "1 ¼  taza de harina",
     "1 cucharadita de sal",
     "1 cucharadita de azúcar",
     "De 2 a 3 cucharadas de agua helada",
