--- a/src/locales/es/recipes/tilapia-con-costra-de-mani-con-yummi-nuts.json
+++ b/src/locales/es/recipes/tilapia-con-costra-de-mani-con-yummi-nuts.json
@@ -15,13 +15,13 @@
     "1/3 de taza de aceite de canola",
     "½ taza de puerro en rodajas finas",
     "¼ de taza de jengibre rallado",
-    "sal al gusto",
+    "Sal al gusto",
     "2 cucharadas de harina",
     "1 huevo batido con sal",
     "½ taza de Yummi Nuts con Limón picadas",
     "2 filetes de tilapia",
     "4 cucharaditas de vinagre de arroz",
-    "pimienta negra al gusto"
+    "Pimienta negra al gusto"
   ],
   "instructions": [
     "Paso 1: Calienta el aceite en un sartén a fuego medio alto.",
